# ***************************************************************************
#    Generic Image Processing (GIP) Framework (Test Suite)
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

DEFS =
AUTOMAKE_OPTIONS = 1.4 foreign nostdinc dist-bzip2 dist-zip

LIBS=-lgip -lbase

SUBDIRS = tests

EXTRA_DIST = AUTHORS ChangeLog COPYING INSTALL README TODO
