####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libanalysis.la

libanalysis_la_SOURCES = Histogram.cpp traverse.cpp

sectiondir = $(includedir)/gip
section_HEADERS = traverse.h Histogram.h

EXTRA_DIST =
