# ***************************************************************************
#    Generic Image Processing (GIP) Framework
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libanalysis.la

libanalysis_la_SOURCES = Histogram.cpp MinimumMaximum.cpp Statistic.cpp traverse.cpp

sectiondir = $(includedir)/gip/analysis
section_HEADERS = Histogram.h MinimumMaximum.h Statistic.h traverse.h

EXTRA_DIST =
