####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = InvalidFormat.cpp GIFEncoder.cpp PCXEncoder.cpp JPEGEncoder.cpp BMPEncoder.cpp TIFFEncoder.cpp PNGEncoder.cpp ImageEncoder.cpp

sectiondir = $(includedir)/gip
section_HEADERS = ImageEncoder.h PNGEncoder.h TIFFEncoder.h BMPEncoder.h JPEGEncoder.h PCXEncoder.h GIFEncoder.h InvalidFormat.h

EXTRA_DIST =
