# ***************************************************************************
#    Generic Image Processing (GIP) Framework
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = InvalidFormat.cpp ImageEncoder.cpp BMPEncoder.cpp GIFEncoder.cpp JPEGEncoder.cpp PCXEncoder.cpp PGMEncoder.cpp PNGEncoder.cpp PPMEncoder.cpp TGAEncoder.cpp TIFFEncoder.cpp

sectiondir = $(includedir)/gip
section_HEADERS = InvalidFormat.h ImageEncoder.h BMPEncoder.h GIFEncoder.h JPEGEncoder.h PCXEncoder.h PGMEncoder.h PNGEncoder.h PPMEncoder.h TGAEncoder.h TIFFEncoder.h

EXTRA_DIST =
