####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libmedia.la

libmedia_la_SOURCES = AVIEncoder.cpp

sectiondir = $(includedir)/gip
section_HEADERS = AVIEncoder.h

EXTRA_DIST =
