# ***************************************************************************
#    Generic Image Processing (GIP) Framework
#    A framework for developing image processing applications
#
#    Copyright (C) 2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = liboperation.la

liboperation_la_SOURCES =

sectiondir = $(includedir)/gip
section_HEADERS = BlueColorMap.h ColdHotColorMap.h GrayColorMap.h GreenColorMap.h HeatColorMap.h RedColorMap.h

EXTRA_DIST =
